Fixed first section spacing

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -2,6 +2,14 @@
 Header
 */
 
+.mainHeader {
+  section {
+    display: flex;
+    align-items: center;
+    margin-left: 86px;
+  }
+}
+
 .mainNav {
   display: flex;
   flex-direction: row;
