--- a/src/assets/scss/components/_layout.scss
+++ b/src/assets/scss/components/_layout.scss
@@ -5,7 +5,7 @@ Layout
 .container {
   max-width: 90%;
   width: 100%;
-  margin: 0 auto;
+  margin: 3rem auto;
 }
 
 .wrapper {
@@ -16,13 +16,7 @@ Layout
 .section {
   width: calc(100vw - 86px);
   height: 100vh;
-  display: flex;
-  align-items: center;
   position: relative;
-
-  &:first-of-type {
-    margin-left: 86px;
-  }
 }
 
 .divider {
@@ -52,10 +46,12 @@ Layout
 
   &::before {
     top: 0;
+    margin-top: 3rem;
   }
 
   &::after {
     bottom: 0;
+    margin-bottom: 3rem;
   }
 }
 
